# SafeGen

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  styles.css  tsconfig.json
source/: index.js  index.ts
source/css/: ui.css
source/html/: ui.html
source/js/: preload.ts  ui.js  ui.ts  window.d.ts
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
